2014-04-25 v1.0 initial version
2014-05-03 v1.1 now with a BigInt variant for the clinically insane