@@ -4,6 +4,7 @@ Changes
 README
 lib/Path/Hilbert.pm
 lib/Path/Hilbert/BigInt.pm
-t/000.t
+t/000-native.t
+t/001-bigint.t
 META.yml                                 Module YAML meta-data (added by MakeMaker)
 META.json                                Module JSON meta-data (added by MakeMaker)
