@@ -41,5 +41,5 @@
       }
    },
    "release_status" : "stable",
-   "version" : "1.103"
+   "version" : "1.2"
 }
